--- a/website/templates/admin/rubrics/rubrics.html
+++ b/website/templates/admin/rubrics/rubrics.html
@@ -47,8 +47,9 @@
 						<td>{{ rubric.pbl_lvl }}</td>
 						<th>Category:</th> 
 						<td>{{ rubric.category }}</td>
-						<br>
 						<tr>
+					</table>
+					<table>
 						<th colspan = "2">
 							<a href="/edit_rubric/{{ rubric.id }}">
 								<button class = "but2">Edit</button>
@@ -60,6 +61,7 @@
 							</a>
 						</th>
 					<table>
+					<br>
                 </div>
             {% endfor %}
         {% endif %}
