--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block button %}
 	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
 	</head>
 <a href="/new_sched/">
     <button>Create New Defense Schedule</button>
