--- a/website/templates/admin/gradesheets/gradesheet.html
+++ b/website/templates/admin/gradesheets/gradesheet.html
@@ -5,7 +5,7 @@ Gradesheets
 {% endblock %}
 {% block button %}
 	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
 	</head>
 <a href="/new_sheet/">
     <button>Create New Template</button>
