--- a/website/templates/admin/groups/new_group.html
+++ b/website/templates/admin/groups/new_group.html
@@ -6,11 +6,13 @@
             
         }
     </style>
-
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/create_sheet.css') }}">
+	</head>
     <div id="overlay">
         <div class='container'>
             <div class='header_div'>
-                <div class='header_title'>
+                <div class='header_title hd_text'>
                     <p>Create New Group</p>
                 </div>
                 <div class='close_button'>
@@ -22,51 +24,53 @@
 
             <div class='content_div'>
                 <div class='form_div'>
-                    <div class='query'>
-                        <label for="groupCode">Group Code:</label>
-                        <span>
-                            <input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled>
-                        </span>
-                    </div>
 
-                    <div class='query'>
-                        <label for="groupName">Group Name:</label>
-                        <span>
-                            <input type='text' id='groupName' name='groupName'>
-                        </span>
-                    </div>
-                        
-                    <div class='query'>
-                        <label for="projectTitle">Project Title:</label>
-                        <span>
-                            <input type='text' id='projectTitle' name='projectTitle'><br>
-                        </span>
-                    </div>
+						<div class='query'>
+							<label for="groupCode">Group Code:</label>
+							<span>
+								<input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled>
+							</span>
+						</div>
+				
+						<div class='query'>
+							<label for="groupName">Group Name:</label>
+							<span>
+								<input type='text' id='groupName' name='groupName'>
+							</span>
+						</div>
+							
+						<div class='query'>
+							<label for="projectTitle">Project Title:</label>
+							<span>
+								<input type='text' id='projectTitle' name='projectTitle'><br>
+							</span>
+						</div>
 
-                    <div class='query'>
-                        <label for="program">Program:</label>
-                        <span>
-                            <select name="program" id='program'>
-                                <option value='BSIT-AGD'>BSIT-AGD</option>
-                                <option value='BSIT-DA'>BSIT-DA</option>
-                                <option value='BSIT-SMBA'>BSIT-SMBA</option>
-                                <option value='BSIT-WMA'>BSIT-WMA</option>
-                                <option value='BSCS'>BSCS</option>
-                                <option value='BMA'>BMA</option>
-                            </select>
-                        </span>
-                    </div>
-                    
-                    <div class='query'>
-                        <label for="totalProp">Total Proponents:</label>
-                        <span>
-                            <input type="text" id="totalProp" name='totalProp' autocomplete='off' min='1' max='9' value=0 disabled style='width: 80%'>
-                            <input type='button' name='generate' value='Add' onclick='addRow();' style='width: 18%'></button>
-                        </span>
-                    </div>
-                    
-                    <div id="cont"></div>
-                    <button id='submit' name='submit'>Submit</button>
+						<div class='query'>
+							<label for="program">Program:</label>
+							<span>
+								<select name="program" id='program'>
+									<option value='BSIT-AGD'>BSIT-AGD</option>
+									<option value='BSIT-DA'>BSIT-DA</option>
+									<option value='BSIT-SMBA'>BSIT-SMBA</option>
+									<option value='BSIT-WMA'>BSIT-WMA</option>
+									<option value='BSCS'>BSCS</option>
+									<option value='BMA'>BMA</option>
+								</select>
+							</span>
+						</div>
+						
+						<div class='query'>
+							<label for="totalProp">Total Proponents:</label>
+							<span>
+								<input type="text" id="totalProp" name='totalProp' autocomplete='off' min='1' max='9' value=0 disabled style='width: 80%'>
+								<input type='button' name='generate' value='Add' onclick='addRow();' style='width: 18%'></button>
+							</span>
+						</div>
+						
+						<div id="cont"></div>
+						<button id='submit' name='submit'>Submit</button>
+					
                 </div>
             </div>
         </div>
