--- a/website/templates/admin/rubrics/rubrics.html
+++ b/website/templates/admin/rubrics/rubrics.html
@@ -10,43 +10,40 @@
 {% endblock %}
 {% block content %}
 	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
 	</head>
     <div class='display_grid'>
         {% if rubrics %}
             {% for rubric in rubrics %}
                 <div class='div1'>
 					<table>
-						<th class = "tb_desc">ID:</th>
-						<td colspan = "3">{{ rubric.id }}</td>
+						<th>ID:</th>
+						<td colspan = "4">{{ rubric.id }}</td>
 						<tr>
-						<th class = "tb_desc">Description:</th>
-						<td colspan = "3">{{ rubric.desc }}</td>
+						<th>Description:</th>
+						<td colspan = "4">{{ rubric.desc }}</td>
 						<tr>
-						<th>Rate 5:</th> 
-						<td colspan = "3">{{ rubric.rate5 }}</td>
+						<th class = "sep_20 ">Rate 5:</th> 
+						<th class = "sep_20 no_border">Rate 4:</th> 
+						<th class = "sep_20 no_border">Rate 3:</th> 
+						<th class = "sep_20 no_border">Rate 2:</th> 
+						<th class = "sep_20 no_border">Rate 1:</th> 
 						<tr>
-						<th>Rate 4:</th> 
-						<td colspan = "3">{{ rubric.rate4 }}</td>
-						<tr>
-						<th>Rate 3:</th> 
-						<td colspan = "3">{{ rubric.rate3 }}</td>
-						<tr>
-						<th>Rate 2:</th> 
-						<td colspan = "3">{{ rubric.rate2 }}</td>
-						<tr>
-						<th>Rate 1:</th> 
-						<td colspan = "3">{{ rubric.rate1 }}</td>
+						<td>{{ rubric.rate5 }}</td>
+						<td>{{ rubric.rate4 }}</td>
+						<td>{{ rubric.rate3 }}</td>
+						<td>{{ rubric.rate2 }}</td>
+						<td>{{ rubric.rate1 }}</td>
 						<tr>
 						<th>Weight:</th>
 						<td>x{{ rubric.weight }}</td>
-						<th class = "tb_desc">Rubric Type:</th> 
-						<td>{{ rubric.rubric_type }}</td>
+						<th>Rubric Type:</th> 
+						<td colspan = "2">{{ rubric.rubric_type }}</td>
 						<tr>
 						<th>PBL Level:</th>
 						<td>{{ rubric.pbl_lvl }}</td>
 						<th>Category:</th> 
-						<td>{{ rubric.category }}</td>
+						<td colspan = "2">{{ rubric.category }}</td>
 						<tr>
 					</table>
 					<table>
