--- a/website/templates/admin/students/student.html
+++ b/website/templates/admin/students/student.html
@@ -7,7 +7,7 @@ Students
 {% endblock %}
 {% block content %}
 	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
 	</head>
     <div class='display_grid'>
         {% if students %}
