--- a/cal_temp_files_2/indiv_sheet.css
+++ b/cal_temp_files_2/indiv_sheet.css
@@ -16,6 +16,8 @@ title_font1 {
 }
 
 table{
+	margin-left: auto;
+	margin-right: auto;
 	width: 100%;
 	border: 1px solid green;
 }
@@ -25,20 +27,16 @@ table{
 	float: right;
 }
 
-tr:nth-child(even) {
-	background-color: #FAFAD2;
-}
-tr:nth-child(odd) {
-	background-color: #FFFF99;
-}
 	
 th{
-	background: green;
-	color: white;
-	padding: 10px;
+	background: 	green;
+	color: black;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
-
 td{
+	border-top: 5px;
+	border: 1px dotted #ddd;
 	padding: 5px;
 }
 
@@ -54,6 +52,13 @@ td{
 	width: 48%;
 }
 
+.sep_fifty{
+	width: 25%;
+}
+
+.sep_20{
+	width: 20%;
+}
 
 .but{
 	float: right;
@@ -61,10 +66,20 @@ td{
 	height: 50px;
 }
 
+.but2 {
+	border-radius: 0px;
+	width: 100%;
+	height: 100%;
+}
+
 .green_bg{
 	background-color: green;
 	text-align: center;
 	box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+}
+
+.gray_bg{
+	background: #E0E0E0;
 }
 
 .yellow_bg{
@@ -75,6 +90,14 @@ td{
 
 .lyellow_bg{
 	background-color: #FAFAD2;
+}
+
+.left_gborder{
+	border-left:  10px solid green;
+}
+
+.left_yborder{
+	border-left:  10px solid gold;
 }
 
 .parent {
@@ -101,6 +124,15 @@ td{
   
 }
 
+.text{
+  resize: none;
+  outline: none;
+  width: 100%;
+  border: none;
+  height: 400px;
+}
+
+
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -124,8 +156,7 @@ td{
   background-color: #04AA6D;
   color: white;
 }
-.div1 { grid-area: 2 / 1 /  auto / 21; 
-border-width: 0px 0px;
+.div1 { grid-area: 2 / 1 /  auto / 21; 	
 }
 .div2 { grid-area: 3 / 1 /  auto / 21;
 	padding-top: 10px;
