--- a/website/templates/admin/groups/edit_group.html
+++ b/website/templates/admin/groups/edit_group.html
@@ -1,5 +1,9 @@
 {% extends "groups/groups.html" %}
+
 {% block overlay %}
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+	</head>
     <div id="overlay">
         <div class='container'>
             <div class='header_div'>
