--- a/website/templates/admin/panelists/new_panel.html
+++ b/website/templates/admin/panelists/new_panel.html
@@ -1,11 +1,10 @@
 {% extends "panelists/panelist.html" %}
 {% block overlay %}
 
-
     <div id="overlay">
         <div class='container'>
             <div class='header_div'>
-                <div class='header_title'>
+                <div class='header_title hd_text'>
                     <p>Create New Panelist</p>
                 </div>
                 <div class='close_button'>
@@ -17,45 +16,60 @@
 
             <div class='content_div'>
                 <div class='form_div'>
-                    <div class='query'>
-                        <label for="groupCode">Group Code:</label>
-                        <span>
-                            <input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled>
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="lastName">Last Name:</label>
-                        <span>
-                            <input type='text' id='lastName' name='lastName'>
-                        </span>
-                    </div>
-                        
-                    <div class='query'>
-                        <label for="firstName">First Name</label>
-                        <span>
-                            <input type='text' id='firstName' name='firstName'><br>
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="middleIn">Middle Initial</label>
-                        <span>
-                            <input type='text' id='middleIn' name='middleIn'><br>
-                        </span>
-                    </div>
-
-                    <div class='query'>
-                        <label for="school">School:</label>
-                        <span>
-                            <select name="school" id='school'>
-                                <option value='FEU Alabang'>FEU Alabang</option>
-                                <option value='FEU Tech'>FEU Tech</option>
-                                <option value='FEU Diliman'>FEU Diliman</option>
-                            </select>
-                        </span>
-                    </div>
-                    <button id='submit' name='submit'>Submit</button>
+					<table class = "tableS">
+						<th>
+						<div class='query'>
+							<label for="groupCode">Group Code:</label>
+							<span>
+								<input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled>
+							</span>
+						</div>
+						</th>
+						<tr>
+						<th>
+						<div class='query'>
+							<label for="lastName">Last Name:</label>
+							<span>
+								<input type='text' id='lastName' name='lastName'>
+							</span>
+						</div>
+						</th>
+						<tr>
+						<th>
+						<div class='query'>
+							<label for="firstName">First Name</label>
+							<span>
+								<input type='text' id='firstName' name='firstName'><br>
+							</span>
+						</div>
+						</th>
+						<tr>
+						<th>
+						<div class='query'>
+							<label for="middleIn">Middle Initial</label>
+							<span>
+								<input type='text' id='middleIn' name='middleIn'><br>
+							</span>
+						</div>
+						</th>
+						<tr>
+						<th>
+						<div class='query'>
+							<label for="school">School:</label>
+							<span>
+								<select name="school" id='school'>
+									<option value='FEU Alabang'>FEU Alabang</option>
+									<option value='FEU Tech'>FEU Tech</option>
+									<option value='FEU Diliman'>FEU Diliman</option>
+								</select>
+							</span>
+						</div>
+						</th>
+						<tr>
+						<th>
+						<button class = "but2" id='submit' name='submit'>Submit</button>
+						</th>
+					</table>
                 </div>
             </div>
         </div>
