--- a/website/templates/admin/schedules/new_sched.html
+++ b/website/templates/admin/schedules/new_sched.html
@@ -1,5 +1,8 @@
 {% extends "schedules/schedule.html" %}
 {% block overlay %}
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+	</head>
     <div id="overlay">
         <div class='container'>
             <div class='header_div'>
@@ -15,96 +18,132 @@
 
             <div class='content_div'>
                 <form method='POST'>
-                    <div class='form_div'>
-                        <div class='query'>
-                            <label for="userCode">Defense Code:</label>
-                            <span>
-                                <input type='text' id='userCode' name='userCode' value ="{{ current_id }}" disabled><br>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="group">Group</label>
-                            <span>
-                                <select name='group' id='group'>
-                                    {% if groups %}
-                                        {% for group in groups %}
-                                            <option value="group{{ group.id }}">{{ group.id }} - {{ group.name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="selectBox1">Head Panelist</label>
-                            <span>
-                                <select name='selectBox1' id='selectBox1'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="selectBox2">Co-Panelist</label>
-                            <span>
-                                <select name='selectBox2' id='selectBox2'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="selectBox3">Co-Panelist</label>
-                            <span>
-                                <select name='selectBox3' id='selectBox3'>
-                                    <option value='no_value'>-----------</option>
-                                    {% if panels %}
-                                        {% for panel in panels %}
-                                            <option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
-                                        {% endfor %}
-                                    {% endif %}
-                                </select>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="defense_date">Defense Date:</label>
-                            <span>
-                                <input type="date" id="defense_date" name="defense_date" required>
-                            </span>
-                        </div>
-
-                        <div class='query'>
-                            <label for="start_time">Start Time:</label>
-                            <span>
-                                <input type="time" id="start_time" name="start_time" min="09:00" max='' required>
-                            </span>
-                        </div>
-                        
-                        <div class='query'>
-                            <label for="duration">Duration</label>
-                            <span>
-                                <select name='duration' id='duration'>
-                                    <option value='hour1'>1</option>
-                                    <option value='hour2'>2</option>
-                                    <option value='hour3'>3</option>
-                                </select>
-                            </span>
-                        </div>
-
-                        
-                        <button type='submit' id='submit' name='submit'>Submit</button>
+                    <div class='div1'>
+						<table class ="tableS">
+							<div class='query'>
+								<th class ="sep_fifty">
+									<label for="userCode">Defense Code:</label>
+								</th>
+								<th class ="no_border">
+									<span>
+										<input type='text' id='userCode' name='userCode' value ="{{ current_id }}" disabled><br>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="group">Group</label>
+								</th>
+								<th class ="no_border">
+									<span>
+										<select class = "dropdown_fill" name='group' id='group'>
+											{% if groups %}
+												{% for group in groups %}
+													<option value="group{{ group.id }}">{{ group.id }} - {{ group.name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="selectBox1">Head Panelist</label>
+								</th>
+								<th class ="no_border">
+									<span>
+										<select class = "dropdown_fill" name='selectBox1' id='selectBox1'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="selectBox2">Co-Panelist</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class = "dropdown_fill" name='selectBox2' id='selectBox2'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="selectBox3">Co-Panelist</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<select class ="dropdown_fill" name='selectBox3' id='selectBox3'>
+											<option value='no_value'>-----------</option>
+											{% if panels %}
+												{% for panel in panels %}
+													<option value="{{ panel.id }}">{{ panel.id }} - {{ panel.last_name}}</option>
+												{% endfor %}
+											{% endif %}
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="defense_date">Defense Date:</label>
+								</th>
+								<th class = "no_border">
+									<span>
+										<input class ="dropdown_fill" type="date" id="defense_date" name="defense_date" required>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								<th>
+									<label for="start_time">Start Time:</label>
+								</th>
+								<th class = "no_border" >
+									<span>
+										<input class = "dropdown_fill" type="time" id="start_time" name="start_time" min="09:00" max='' required>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<div class='query'>
+								
+								<th>
+									<label for="duration">Duration</label>
+								</th>
+								<th class ="no_border">
+									<span>
+										<select class = "dropdown_fill" name='duration' id='duration'>
+											<option value='hour1'>1</option>
+											<option value='hour2'>2</option>
+											<option value='hour3'>3</option>
+										</select>
+									</span>
+								</th>
+							</div>
+							<tr>
+							<th colspan = "2">
+								<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
+							</th>
+						</table>
                     </div>
                     
                 </form>
