--- a/website/templates/user/groups_u.html
+++ b/website/templates/user/groups_u.html
@@ -4,18 +4,34 @@
 {% endblock %}
 
 {% block content %}
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+	</head>
     <div class='display_grid'>
         {% if groups %}
             {% for group in groups %}
-                <div class='box'
-                    <p>ID: {{group.id}}</p>
-                    <p>Group Name: {{group.name}}</p>
-                    <p>Project Title: {{ group.project_title }}</p>
-                    <p>Program: {{group.program}}</p>
-                    <p>Members:</p>
-                    {% for member in group.members %}
-                        <p>{{ member.stud_no }} - {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</p>
-                    {% endfor%}
+                <div class='div1'>
+					<table>
+						<th class = "tb_desc">ID:</th> 
+						<td>{{group.id}}</td>
+						<tr>
+						<th>Group Name:</th> 
+						<td>{{group.name}}</td>
+						<tr>
+						<th>Project Title:</th> 
+						<td>{{ group.project_title }}</td>
+						<tr>
+						<th>Program:</th> 
+						<td>{{group.program}}</td>
+						<tr>
+						<th colspan = "2">Members:</th>
+						<tr>
+						{% for member in group.members %}
+							<th> Student no.{{ member.stud_no }} </th>
+							<td> {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</td>
+							<tr>
+						{% endfor%}
+					</table>
                 </div>
             {% endfor %}
         {% endif %}
