--- a/website/templates/user/panelists_u.html
+++ b/website/templates/user/panelists_u.html
@@ -1,21 +1,32 @@
 {% extends "base_user.html" %}
 {% block title %}Home Page{% endblock %}
 {% block content %}
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+	</head>
     <div class='display_grid'>
         {% if panels %}
             {% for panel in panels %}
-                <div class='box'>
-                    <p>ID: {{ panel.id }}</p>
-                    <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                    <p>School: {{ panel.school }}</p>
-                    <p>Defenses:</p>
-                    {% if panel.defenses %} 
-                        {% for defense in panel.defenses %}
-                            <p>    - {{ defense.group.name }} - {{ defense.start_date }}</p>
-                        {% endfor %}
-                    {% else %}
-                        <p>NOTHING SCHEDULED</p>
-                    {% endif %}
+                <div class='div1'>
+					<table>
+						<th>ID:</th> 
+						<td>{{ panel.id }}</td>
+						<tr>
+						<th>Name:</th> 
+						<td>{{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</td>
+						<tr>
+						<th>School:</th> 
+						<td>{{ panel.school }}</td>
+						<tr>
+						<th colspan = "2">Defenses:</th>
+						{% if panel.defenses %} 
+							{% for defense in panel.defenses %}
+								<p>    - {{ defense.group.name }} - {{ defense.start_date }}</p><tr>
+							{% endfor %}
+						{% else %}
+							<p>NOTHING SCHEDULED</p><tr>
+						{% endif %}
+					</table>
                     <br>
                 </div>
             {% endfor %}
