--- a/website/templates/user/students_u.html
+++ b/website/templates/user/students_u.html
@@ -2,14 +2,28 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 
+	<head>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
+	</head>
+
     <div class='display_grid'>
         {% if students %}
             {% for student in students %}
-                <div class='box'>
-                    <p>ID: {{ student.stud_no }}</p>
-                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                    <p>Group: {{ student.group_id }}</p>
-                    <p>Group Name: {{ student.group.name }}</p>
+                <div class='div1'>
+					<table>
+						<th>ID:</th> 
+						<td>{{ student.stud_no }}</td>
+						<tr>
+						<th>Name:</th> 
+						<td>{{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</td>
+						<tr>
+						<th>Group:</th>
+						<td>{{ student.group_id }}</td>
+						<tr>
+						<th>Group Name:
+						<td>{{ student.group.name }}</td>
+						<tr>
+					</table>
                     <br>
                 </div>
                 
